package NBlenderOnlineLearning.NProto;

import "mapreduce/yt/interface/protos/extension.proto";
import "kernel/blender/online_learning/protos/util.proto";

option go_package = "a.yandex-team.ru/kernel/blender/online_learning/protos";
// todo: decay ?
message TFeatureScaler {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    optional TFloatVector Mean = 1;
    optional TFloatVector StdDev = 2; // todo: deprecated, don't use on upper
    optional TFloatVector Deviation = 3;
    optional float SumWeights = 4;
}

message TExplorationData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    optional uint64 TraineeReqCount = 1;
}

message TModel {
    option (NYT.default_field_flags) = SERIALIZATION_YT;
    option (NYT.default_field_flags) = OPTIONAL_LIST;

    optional string Type = 1;
    optional uint32 ClassNumber = 2; // for multiclassification
    optional uint32 FeatureCount = 3;
    optional TFloatMatrix Theta = 4;
    optional TFeatureScaler FeatureScaler = 5;
    repeated string FeatureSources = 6;
    optional TExplorationData ExplorationData = 7;
    optional uint64 Timestamp = 8;
}
